# typer-cli-template

./: README.md  main.py  requirements.in  requirements.txt
tcli/: pyproject.toml
tcli/src/tcli/: __init__.py  main.py
